// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`server-message should render 1`] = `
<div
  className="callout withicon info"
>
  Valid query, but unfortunately no data was available on the server
</div>
`;

exports[`server-message should render 2`] = `
<div
  className="callout withicon alert"
>
  There was an error, this is not a valid request to the server
</div>
`;

exports[`server-message should render 3`] = `
<div
  className="callout withicon alert"
>
  There was an error, this is not a known resource on the server
</div>
`;

exports[`server-message should render 4`] = `
<div
  className="callout withicon alert"
>
  The server takes too long to respond. Your request is running in the background. Please check again in a while for the results
</div>
`;

exports[`server-message should render 5`] = `
<div
  className="callout withicon alert"
>
  There was an error while getting data from the server
</div>
`;
